--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,1 +1,98 @@
-dad
+name: DSP Spectrogram Complete Pipeline
+
+on:
+  push:
+    branches: [ "main", "master" ]
+  pull_request:
+    branches: [ "main", "master" ]
+
+jobs:
+  process-spectrograms:
+    runs-on: ubuntu-latest
+
+    steps:
+    # 1. 下載你的程式碼
+    - name: Checkout repository
+      uses: actions/checkout@v3
+
+    # 2. 設定 Python 環境
+    - name: Set up Python 3.9
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.9'
+
+    # 3. 安裝必要的套件 (C 編譯器 & Python Libraries)
+    - name: Install Dependencies
+      run: |
+        sudo apt-get update && sudo apt-get install -y gcc
+        pip install numpy matplotlib scipy
+
+    # 4. 編譯 C 程式 (Signal Gen & Spectrogram)
+    - name: Compile C Code
+      run: |
+        echo "Compiling C files..."
+        gcc -o signal_gen signal_gen.c -lm
+        gcc -o spectrogram spectrogram.c -lm
+        chmod +x signal_gen spectrogram
+
+    # 5. 準備所有 WAV 檔案 (生成 + 下載)
+    - name: Prepare WAV Files
+      run: |
+        echo "Generating synthetic wav files..."
+        ./signal_gen 8000 s-8kHz.wav
+        ./signal_gen 16000 s-16kHz.wav
+
+        echo "Downloading real speech wav files..."
+        # 注意：請確認此下載連結是否為您的正確 Repo 來源，若檔案已在 Repo 內可移除此段
+        BASE_URL="https://github.com/cychiang-ntpu/mini-project-5-spectrogram/raw/main"
+        # 使用 || true 避免如果檔案不存在導致整個流程失敗 (若您已上傳檔案到 repo 則不需要 curl)
+        curl -L -o aeueo-8kHz.wav "$BASE_URL/aeueo-8Hz.wav" || echo "Download skipped or failed"
+        curl -L -o aeueo-16kHz.wav "$BASE_URL/aeueo-16kHz.wav" || echo "Download skipped or failed"
+
+    # 6. 執行核心任務：4個檔案 x 4種設定 = 16次執行
+    - name: Run Spectrogram Analysis & Plotting
+      run: |
+        # 定義要處理的檔案列表
+        files=("s-8kHz.wav" "s-16kHz.wav" "aeueo-8kHz.wav" "aeueo-16kHz.wav")
+
+        for wav in "${files[@]}"; do
+          # 檢查檔案是否存在，避免報錯
+          if [ ! -f "$wav" ]; then
+            echo "File $wav not found, skipping..."
+            continue
+          fi
+
+          # 取得不含副檔名的名稱
+          base=$(basename "$wav" .wav)
+          echo "================ Processing: $base ================"
+
+          # --- Setting 1: 32ms Window, Rectangular, 32ms DFT, 10ms Interval ---
+          echo "Running Setting 1..."
+          ./spectrogram 32 rectangular 32 10 "$wav" "${base}.Set1.txt"
+          python3 spectshow.py "$wav" "${base}.Set1.txt" "${base}.Set1.pdf"
+
+          # --- Setting 2: 32ms Window, Hamming, 32ms DFT, 10ms Interval ---
+          echo "Running Setting 2..."
+          ./spectrogram 32 hamming 32 10 "$wav" "${base}.Set2.txt"
+          python3 spectshow.py "$wav" "${base}.Set2.txt" "${base}.Set2.pdf"
+
+          # --- Setting 3: 30ms Window, Rectangular, 32ms DFT, 10ms Interval ---
+          echo "Running Setting 3..."
+          ./spectrogram 30 rectangular 32 10 "$wav" "${base}.Set3.txt"
+          python3 spectshow.py "$wav" "${base}.Set3.txt" "${base}.Set3.pdf"
+
+          # --- Setting 4: 30ms Window, Hamming, 32ms DFT, 10ms Interval ---
+          echo "Running Setting 4..."
+          ./spectrogram 30 hamming 32 10 "$wav" "${base}.Set4.txt"
+          python3 spectshow.py "$wav" "${base}.Set4.txt" "${base}.Set4.pdf"
+        done
+
+    # 7. 打包所有結果供下載
+    - name: Upload Results (Artifacts)
+      uses: actions/upload-artifact@v4
+      with:
+        name: All-Spectrogram-Results
+        path: |
+          *.pdf
+          *.txt
+          *.wav
