--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,43 +60,40 @@ jobs:
     # --------------------------------------------------
     - name: Run Method 0
       run: |
-        ./encoder 0 test.bmp R.txt G.txt B.txt dim.txt
-        ./decoder 0 out0.bmp R.txt G.txt B.txt dim.txt
+        ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
+        ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
 
     # --------------------------------------------------
     # Method 1 (basic)
     # --------------------------------------------------
     - name: Run Method 1
       run: |
-        ./encoder 1 test.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-                   qF_Y.raw qF_Cb.raw qF_Cr.raw \
-                   eF_Y.raw eF_Cb.raw eF_Cr.raw
+        ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 out1.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-                   qF_Y.raw qF_Cb.raw qF_Cr.raw \
-                   eF_Y.raw eF_Cb.raw eF_Cr.raw
+        ./decoder 1 QResKimberly.bmp Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw
+        ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
     # --------------------------------------------------
     # Method 2
     # --------------------------------------------------
     - name: Run Method 2
       run: |
-        ./encoder 2 test.bmp ascii rle.txt
-        ./decoder 2 out2a.bmp ascii rle.txt
+        ./encoder 2 Kimberly.bmp ascii rle_code.txt 
+        ./decoder 2 QResKimberly.bmp ascii rle_code.txt 
 
-        ./encoder 2 test.bmp binary rle.bin
-        ./decoder 2 out2b.bmp binary rle.bin
+        ./encoder 2 Kimberly.bmp ascii rle_code.txt 
+        ./decoder 2 QResKimberly.bmp binary rle_code.bin 
 
     # --------------------------------------------------
     # Method 3
     # --------------------------------------------------
     - name: Run Method 3
       run: |
-        ./encoder 3 test.bmp ascii codebook.txt huffman.txt
-        ./decoder 3 out3a.bmp ascii codebook.txt huffman.txt
+        ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt 
+        ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt 
 
-        ./encoder 3 test.bmp binary codebook.txt huffman.bin
-        ./decoder 3 out3b.bmp binary codebook.txt huffman.bin
+        ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin 
+        ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin 
 
     - name: List outputs
       run: |
