--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,37 +11,29 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # --------------------------------------------------
-    # Checkout
-    # --------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --------------------------------------------------
-    # Toolchain
-    # --------------------------------------------------
     - name: Install build tools
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential python3
 
-    # --------------------------------------------------
-    # Build encoder / decoder
-    # --------------------------------------------------
+    # ----------------------------
+    # Build
+    # ----------------------------
     - name: Build encoder / decoder
       run: |
         gcc encoder.c -O2 -Wall -lm -o encoder
         gcc decoder.c -O2 -Wall -lm -o decoder
-        chmod +x encoder decoder
 
-    # --------------------------------------------------
-    # Prepare minimal BMP (CI 沒有 Kimberly.bmp)
-    # --------------------------------------------------
-    - name: Prepare minimal test BMP
+    # ----------------------------
+    # Prepare test BMP (CI 專用)
+    # ----------------------------
+    - name: Prepare test BMP
       run: |
         python3 << 'EOF'
         import struct
-
         W, H = 8, 8
         row_size = ((W*3+3)//4)*4
         img_size = row_size * H
@@ -54,33 +46,28 @@ jobs:
             img_size, 3780, 3780, 0, 0
         )
 
-        with open("test.bmp","wb") as f:
+        with open("Kimberly.bmp","wb") as f:
             f.write(header)
             f.write(info)
             for y in range(H):
                 row = bytearray()
                 for x in range(W):
-                    row += bytes([x*30, y*30, 128])  # B G R
+                    row += bytes([x*30, y*30, 128])
                 row += b'\x00' * (row_size - W*3)
                 f.write(row)
         EOF
 
-    # 👉 CI 用 test.bmp 當 Kimberly.bmp（不改你指令）
-    - name: Alias test.bmp as Kimberly.bmp
-      run: |
-        cp test.bmp Kimberly.bmp
-
-    # --------------------------------------------------
+    # ----------------------------
     # Method 0
-    # --------------------------------------------------
+    # ----------------------------
     - name: Run Method 0
       run: |
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
 
-    # --------------------------------------------------
+    # ----------------------------
     # Method 1
-    # --------------------------------------------------
+    # ----------------------------
     - name: Run Method 1
       run: |
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
@@ -92,20 +79,22 @@ jobs:
         ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-    # --------------------------------------------------
-    # Method 2 (ascii + binary)
-    # --------------------------------------------------
+    # ----------------------------
+    # Method 2
+    # ----------------------------
     - name: Run Method 2
       run: |
+        rm -f rle_code.txt rle_code.bin
+
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
         ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
         ./encoder 2 Kimberly.bmp binary rle_code.bin
         ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
-    # --------------------------------------------------
-    # Method 3 (ascii + binary)
-    # --------------------------------------------------
+    # ----------------------------
+    # Method 3
+    # ----------------------------
     - name: Run Method 3
       run: |
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
@@ -114,9 +103,9 @@ jobs:
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
-    # --------------------------------------------------
-    # List outputs
-    # --------------------------------------------------
+    # ----------------------------
+    # Artifacts
+    # ----------------------------
     - name: List outputs
       run: |
-        ls -lh || true
+        ls -lh
