--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,29 +11,36 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    # --------------------------------------------------
+    # Checkout
+    # --------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # --------------------------------------------------
+    # Toolchain
+    # --------------------------------------------------
     - name: Install build tools
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential python3
 
-    # ----------------------------
+    # --------------------------------------------------
     # Build
-    # ----------------------------
+    # --------------------------------------------------
     - name: Build encoder / decoder
       run: |
         gcc encoder.c -O2 -Wall -lm -o encoder
         gcc decoder.c -O2 -Wall -lm -o decoder
 
-    # ----------------------------
-    # Prepare test BMP (CI 專用)
-    # ----------------------------
+    # --------------------------------------------------
+    # Prepare minimal test BMP (8x8)
+    # --------------------------------------------------
     - name: Prepare test BMP
       run: |
         python3 << 'EOF'
         import struct
+
         W, H = 8, 8
         row_size = ((W*3+3)//4)*4
         img_size = row_size * H
@@ -52,22 +59,22 @@ jobs:
             for y in range(H):
                 row = bytearray()
                 for x in range(W):
-                    row += bytes([x*30, y*30, 128])
+                    row += bytes([x*30, y*30, 128])  # B G R
                 row += b'\x00' * (row_size - W*3)
                 f.write(row)
         EOF
 
-    # ----------------------------
+    # --------------------------------------------------
     # Method 0
-    # ----------------------------
+    # --------------------------------------------------
     - name: Run Method 0
       run: |
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
 
-    # ----------------------------
+    # --------------------------------------------------
     # Method 1
-    # ----------------------------
+    # --------------------------------------------------
     - name: Run Method 1
       run: |
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
@@ -79,33 +86,40 @@ jobs:
         ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-    # ----------------------------
-    # Method 2
-    # ----------------------------
+    # --------------------------------------------------
+    # Method 2 (ascii + binary)
+    # --------------------------------------------------
     - name: Run Method 2
       run: |
-        rm -f rle_code.txt rle_code.bin
-
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
         ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
         ./encoder 2 Kimberly.bmp binary rle_code.bin
         ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
-    # ----------------------------
-    # Method 3
-    # ----------------------------
+    # --------------------------------------------------
+    # Method 3 (depends on Method 2 binary)
+    # --------------------------------------------------
     - name: Run Method 3
       run: |
+        # Method 3 依賴 Method 2 binary
+        ./encoder 2 Kimberly.bmp binary rle_code.bin
+
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
         ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt
 
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
-    # ----------------------------
-    # Artifacts
-    # ----------------------------
-    - name: List outputs
-      run: |
-        ls -lh
+    # --------------------------------------------------
+    # Upload artifacts
+    # --------------------------------------------------
+    - name: Upload artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: mmsp-results
+        path: |
+          *.bmp
+          *.txt
+          *.bin
+          *.raw
