--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,7 +34,7 @@ jobs:
         gcc decoder.c -O2 -Wall -lm -o decoder
 
     # --------------------------------------------------
-    # Prepare minimal test BMP (8x8)
+    # Prepare test BMP (8x8)
     # --------------------------------------------------
     - name: Prepare test BMP
       run: |
@@ -59,7 +59,7 @@ jobs:
             for y in range(H):
                 row = bytearray()
                 for x in range(W):
-                    row += bytes([x*30, y*30, 128])  # B G R
+                    row += bytes([x*30, y*30, 128])
                 row += b'\x00' * (row_size - W*3)
                 f.write(row)
         EOF
@@ -71,6 +71,7 @@ jobs:
       run: |
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
+        diff Kimberly.bmp ResKimberly.bmp
 
     # --------------------------------------------------
     # Method 1
@@ -80,14 +81,13 @@ jobs:
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 QResKimberly.bmp Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-          qF_Y.raw qF_Cb.raw qF_Cr.raw
-
         ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
+        diff Kimberly.bmp ResKimberly.bmp
+
     # --------------------------------------------------
-    # Method 2 (ascii + binary)
+    # Method 2
     # --------------------------------------------------
     - name: Run Method 2
       run: |
@@ -98,11 +98,11 @@ jobs:
         ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
     # --------------------------------------------------
-    # Method 3 (depends on Method 2 binary)
+    # Method 3（重點：不再 system()）
     # --------------------------------------------------
     - name: Run Method 3
       run: |
-        # Method 3 依賴 Method 2 binary
+        # Method 3 明確依賴 Method 2 binary
         ./encoder 2 Kimberly.bmp binary rle_code.bin
 
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
@@ -112,7 +112,7 @@ jobs:
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
     # --------------------------------------------------
-    # Upload artifacts
+    # Artifacts
     # --------------------------------------------------
     - name: Upload artifacts
       uses: actions/upload-artifact@v4
