--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MMSP Final Project – Build & Run (Method 0~3)
+name: MMSP Final Project – Build, Run & Verify
 
 on:
   push:
@@ -34,12 +34,8 @@ jobs:
         gcc decoder.c -O2 -Wall -lm -o decoder
         chmod +x encoder decoder
 
-    # ★★★★★ 關鍵修正：讓 system("encoder ...") 找得到 ★★★★★
-    - name: Add encoder to PATH
-      run: echo "$PWD" >> $GITHUB_PATH
-
     # --------------------------------------------------
-    # 4. Prepare minimal test BMP (8x8)
+    # 4. Prepare test BMP (8x8)
     # --------------------------------------------------
     - name: Prepare test BMP
       run: |
@@ -49,12 +45,9 @@ jobs:
         row_size = ((W*3+3)//4)*4
         img_size = row_size * H
         file_size = 54 + img_size
-
         header = struct.pack("<2sIHHI", b"BM", file_size, 0, 0, 54)
-        info = struct.pack("<IIIHHIIIIII",
-            40, W, H, 1, 24, 0,
-            img_size, 3780, 3780, 0, 0)
-
+        info = struct.pack("<IIIHHIIIIII", 40, W, H, 1, 24, 0,
+                           img_size, 3780, 3780, 0, 0)
         with open("Kimberly.bmp","wb") as f:
             f.write(header)
             f.write(info)
@@ -71,34 +64,29 @@ jobs:
     # --------------------------------------------------
     - name: Run Method 0
       run: |
-        echo "===== Method 0 ====="
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
-        diff Kimberly.bmp ResKimberly.bmp || echo "Method 0 diff exists"
+        diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
     # Method 1
     # --------------------------------------------------
     - name: Run Method 1
       run: |
-        echo "===== Method 1 ====="
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-            qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
+          qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 QResKimberly.bmp Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-            qF_Y.raw qF_Cb.raw qF_Cr.raw
+        ./decoder 1 ResKimberly.bmp \
+          Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
+          qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-            qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
-
-        diff Kimberly.bmp ResKimberly.bmp || echo "Method 1 diff exists (lossy expected)"
+        diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
     # Method 2 (ascii + binary)
     # --------------------------------------------------
     - name: Run Method 2
       run: |
-        echo "===== Method 2 ====="
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
         ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
@@ -107,14 +95,17 @@ jobs:
 
     # --------------------------------------------------
     # Method 3 (ascii + binary)
-    # ★ Method 3 依賴 Method 2 binary，現在 PATH 已修好
+    # 注意：Method 3 內部 system() 會呼叫 ./encoder
     # --------------------------------------------------
     - name: Run Method 3
+      env:
+        PATH: ${{ github.workspace }}:${{ env.PATH }}
       run: |
-        echo "===== Method 3 ====="
+        echo "===== Method 3 ascii ====="
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
         ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt
 
+        echo "===== Method 3 binary ====="
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
@@ -124,7 +115,7 @@ jobs:
     - name: Upload Results (Artifacts)
       uses: actions/upload-artifact@v4
       with:
-        name: MMSP-Method0-3-Results
+        name: MMSP-All-Results
         path: |
           *.bmp
           *.txt
