--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MMSP Final Project – Build, Run & Verify
+name: MMSP Final Project – Encoder / Decoder CI
 
 on:
   push:
@@ -10,15 +10,19 @@ jobs:
   build-and-run:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        shell: bash
+
     steps:
     # --------------------------------------------------
-    # 1. Checkout
+    # 1. Checkout source code
     # --------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
     # --------------------------------------------------
-    # 2. Install tools
+    # 2. Install required tools
     # --------------------------------------------------
     - name: Install build tools
       run: |
@@ -26,29 +30,45 @@ jobs:
         sudo apt-get install -y build-essential python3
 
     # --------------------------------------------------
-    # 3. Build encoder / decoder
+    # 3. Compile encoder / decoder
     # --------------------------------------------------
     - name: Build encoder / decoder
       run: |
+        set -e
         gcc encoder.c -O2 -Wall -lm -o encoder
         gcc decoder.c -O2 -Wall -lm -o decoder
         chmod +x encoder decoder
 
     # --------------------------------------------------
-    # 4. Prepare test BMP (8x8)
+    # 4. Ensure encoder is found by system()
+    # --------------------------------------------------
+    - name: Add current directory to PATH
+      run: |
+        echo "$PWD" >> $GITHUB_PATH
+        which encoder
+        which decoder
+
+    # --------------------------------------------------
+    # 5. Generate test BMP (Kimberly.bmp)
     # --------------------------------------------------
     - name: Prepare test BMP
       run: |
         python3 << 'EOF'
         import struct
+
         W, H = 8, 8
         row_size = ((W*3+3)//4)*4
         img_size = row_size * H
         file_size = 54 + img_size
+
         header = struct.pack("<2sIHHI", b"BM", file_size, 0, 0, 54)
-        info = struct.pack("<IIIHHIIIIII", 40, W, H, 1, 24, 0,
-                           img_size, 3780, 3780, 0, 0)
-        with open("Kimberly.bmp","wb") as f:
+        info = struct.pack(
+            "<IIIHHIIIIII",
+            40, W, H, 1, 24, 0,
+            img_size, 3780, 3780, 0, 0
+        )
+
+        with open("Kimberly.bmp", "wb") as f:
             f.write(header)
             f.write(info)
             for y in range(H):
@@ -60,33 +80,35 @@ jobs:
         EOF
 
     # --------------------------------------------------
-    # Method 0
+    # 6. Method 0
     # --------------------------------------------------
     - name: Run Method 0
       run: |
+        set -e
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
-        diff Kimberly.bmp ResKimberly.bmp || true
+        diff Kimberly.bmp ResKimberly.bmp || echo "Method 0: diff exists"
 
     # --------------------------------------------------
-    # Method 1
+    # 7. Method 1
     # --------------------------------------------------
     - name: Run Method 1
       run: |
+        set -e
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 ResKimberly.bmp \
-          Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
+        ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        diff Kimberly.bmp ResKimberly.bmp || true
+        diff Kimberly.bmp ResKimberly.bmp || echo "Method 1: diff exists (lossy expected)"
 
     # --------------------------------------------------
-    # Method 2 (ascii + binary)
+    # 8. Method 2 (ascii + binary)
     # --------------------------------------------------
     - name: Run Method 2
       run: |
+        set -e
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
         ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
@@ -94,28 +116,28 @@ jobs:
         ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
     # --------------------------------------------------
-    # Method 3 (ascii + binary)
-    # 注意：Method 3 內部 system() 會呼叫 ./encoder
+    # 9. Method 3 (ascii + binary)
     # --------------------------------------------------
     - name: Run Method 3
-      env:
-        PATH: ${{ github.workspace }}:${{ env.PATH }}
       run: |
-        echo "===== Method 3 ascii ====="
+        set -e
+
+        # Method 3 may internally call encoder via system()
+        # PATH already fixed above
+
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
         ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt
 
-        echo "===== Method 3 binary ====="
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
     # --------------------------------------------------
-    # Upload artifacts
+    # 10. Upload all outputs
     # --------------------------------------------------
-    - name: Upload Results (Artifacts)
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: MMSP-All-Results
+        name: MMSP-Final-Outputs
         path: |
           *.bmp
           *.txt
