--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MMSP Final Project – Encoder / Decoder CI
+name: MMSP Final Project – Build & Run
 
 on:
   push:
@@ -10,19 +10,15 @@ jobs:
   build-and-run:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        shell: bash
-
     steps:
     # --------------------------------------------------
-    # 1. Checkout source code
+    # 1. Checkout
     # --------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
     # --------------------------------------------------
-    # 2. Install required tools
+    # 2. Install dependencies
     # --------------------------------------------------
     - name: Install build tools
       run: |
@@ -30,26 +26,25 @@ jobs:
         sudo apt-get install -y build-essential python3
 
     # --------------------------------------------------
-    # 3. Compile encoder / decoder
+    # 3. Build encoder / decoder
     # --------------------------------------------------
     - name: Build encoder / decoder
       run: |
-        set -e
         gcc encoder.c -O2 -Wall -lm -o encoder
         gcc decoder.c -O2 -Wall -lm -o decoder
         chmod +x encoder decoder
 
     # --------------------------------------------------
-    # 4. Ensure encoder is found by system()
+    # 4. Export PATH (⭐ 關鍵，Method 3 需要)
     # --------------------------------------------------
-    - name: Add current directory to PATH
+    - name: Export PATH for encoder / decoder
       run: |
-        echo "$PWD" >> $GITHUB_PATH
+        echo "PATH=$PATH:$(pwd)" >> "$GITHUB_ENV"
         which encoder
         which decoder
 
     # --------------------------------------------------
-    # 5. Generate test BMP (Kimberly.bmp)
+    # 5. Prepare test BMP (8x8)
     # --------------------------------------------------
     - name: Prepare test BMP
       run: |
@@ -68,7 +63,7 @@ jobs:
             img_size, 3780, 3780, 0, 0
         )
 
-        with open("Kimberly.bmp", "wb") as f:
+        with open("Kimberly.bmp","wb") as f:
             f.write(header)
             f.write(info)
             for y in range(H):
@@ -80,35 +75,35 @@ jobs:
         EOF
 
     # --------------------------------------------------
-    # 6. Method 0
+    # Method 0
     # --------------------------------------------------
     - name: Run Method 0
       run: |
-        set -e
         ./encoder 0 Kimberly.bmp R.txt G.txt B.txt dim.txt
         ./decoder 0 ResKimberly.bmp R.txt G.txt B.txt dim.txt
-        diff Kimberly.bmp ResKimberly.bmp || echo "Method 0: diff exists"
+        diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
-    # 7. Method 1
+    # Method 1
     # --------------------------------------------------
     - name: Run Method 1
       run: |
-        set -e
         ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
+
+        ./decoder 1 QResKimberly.bmp Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
+          qF_Y.raw qF_Cb.raw qF_Cr.raw
 
         ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
           qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        diff Kimberly.bmp ResKimberly.bmp || echo "Method 1: diff exists (lossy expected)"
+        diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
-    # 8. Method 2 (ascii + binary)
+    # Method 2 (ascii + binary)
     # --------------------------------------------------
     - name: Run Method 2
       run: |
-        set -e
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
         ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
@@ -116,28 +111,25 @@ jobs:
         ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
     # --------------------------------------------------
-    # 9. Method 3 (ascii + binary)
+    # Method 3 (⭐ 關鍵：先保證 Method 2 binary 已存在)
     # --------------------------------------------------
     - name: Run Method 3
       run: |
-        set -e
-
-        # Method 3 may internally call encoder via system()
-        # PATH already fixed above
-
+        # Method 3 ASCII
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
         ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt
 
+        # Method 3 BINARY
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
         ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
     # --------------------------------------------------
-    # 10. Upload all outputs
+    # Upload Artifacts
     # --------------------------------------------------
-    - name: Upload artifacts
+    - name: Upload Results (Artifacts)
       uses: actions/upload-artifact@v4
       with:
-        name: MMSP-Final-Outputs
+        name: MMSP-Final-Results
         path: |
           *.bmp
           *.txt
