--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: MMSP Final Project – Build & Run (Method 0~3)
+name: MMSP Final Project – Build & Run
 
 on:
   push:
@@ -11,69 +11,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    # --------------------------------------------------
-    # 1. Checkout
-    # --------------------------------------------------
     - name: Checkout repository
       uses: actions/checkout@v4
 
-    # --------------------------------------------------
-    # 2. Install tools
-    # --------------------------------------------------
     - name: Install build tools
       run: |
         sudo apt-get update
         sudo apt-get install -y build-essential python3
 
-    # --------------------------------------------------
-    # 3. Build encoder / decoder
-    # --------------------------------------------------
     - name: Build encoder / decoder
       run: |
         gcc encoder.c -O2 -Wall -lm -o encoder
         gcc decoder.c -O2 -Wall -lm -o decoder
+        chmod +x encoder decoder
 
-    # --------------------------------------------------
-    # 4. Make encoder/decoder visible to system()
-    # --------------------------------------------------
-    - name: Install encoder into PATH (symlink)
+    # ⭐ 關鍵修正：讓 system("encoder ...") 找得到
+    - name: Add current directory to PATH
       run: |
-        sudo ln -sf "$PWD/encoder" /usr/local/bin/encoder
-        sudo ln -sf "$PWD/decoder" /usr/local/bin/decoder
+        echo "$(pwd)" >> $GITHUB_PATH
 
     # --------------------------------------------------
-    # 5. Prepare test BMP (8x8)
-    # --------------------------------------------------
-    - name: Prepare test BMP
-      run: |
-        python3 << 'EOF'
-        import struct
-
-        W, H = 8, 8
-        row_size = ((W*3+3)//4)*4
-        img_size = row_size * H
-        file_size = 54 + img_size
-
-        header = struct.pack("<2sIHHI", b"BM", file_size, 0, 0, 54)
-        info = struct.pack(
-            "<IIIHHIIIIII",
-            40, W, H, 1, 24, 0,
-            img_size, 3780, 3780, 0, 0
-        )
-
-        with open("Kimberly.bmp","wb") as f:
-            f.write(header)
-            f.write(info)
-            for y in range(H):
-                row = bytearray()
-                for x in range(W):
-                    row += bytes([x*30, y*30, 128])
-                row += b'\x00' * (row_size - W*3)
-                f.write(row)
-        EOF
-
-    # --------------------------------------------------
-    # Method 0
+    # Method 0（照你給的）
     # --------------------------------------------------
     - name: Run Method 0
       run: |
@@ -82,49 +40,48 @@ jobs:
         diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
-    # Method 1
+    # Method 1（照你給的）
     # --------------------------------------------------
     - name: Run Method 1
       run: |
-        ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-          qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
+        ./encoder 1 Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
-        ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt \
-          qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
+        ./decoder 1 QResKimberly.bmp Kimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw
+        ./decoder 1 ResKimberly.bmp Qt_Y.txt Qt_Cb.txt Qt_Cr.txt dim.txt qF_Y.raw qF_Cb.raw qF_Cr.raw eF_Y.raw eF_Cb.raw eF_Cr.raw
 
         diff Kimberly.bmp ResKimberly.bmp || true
 
     # --------------------------------------------------
-    # Method 2
+    # Method 2（照你給的）
     # --------------------------------------------------
     - name: Run Method 2
       run: |
         ./encoder 2 Kimberly.bmp ascii rle_code.txt
-        ./decoder 2 ResKimberly.bmp ascii rle_code.txt
+        ./decoder 2 QResKimberly.bmp ascii rle_code.txt
 
         ./encoder 2 Kimberly.bmp binary rle_code.bin
-        ./decoder 2 ResKimberly.bmp binary rle_code.bin
+        ./decoder 2 QResKimberly.bmp binary rle_code.bin
 
     # --------------------------------------------------
-    # Method 3 (depends on Method 2 binary)
+    # Method 3（照你給的，這次會跑）
     # --------------------------------------------------
     - name: Run Method 3
       run: |
         ./encoder 3 Kimberly.bmp ascii codebook.txt huffman_code.txt
-        ./decoder 3 ResKimberly.bmp ascii codebook.txt huffman_code.txt
+        ./decoder 3 QResKimberly.bmp ascii codebook.txt huffman_code.txt
 
         ./encoder 3 Kimberly.bmp binary codebook.txt huffman_code.bin
-        ./decoder 3 ResKimberly.bmp binary codebook.txt huffman_code.bin
+        ./decoder 3 QResKimberly.bmp binary codebook.txt huffman_code.bin
 
     # --------------------------------------------------
-    # Upload artifacts
+    # Upload artifacts（不自己壓縮）
     # --------------------------------------------------
-    - name: Upload Results (Artifacts)
+    - name: Upload artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: MMSP-Final-Results
+        name: MMSP_Final_Project_Output
         path: |
           *.bmp
           *.txt
-          *.bin
           *.raw
+          *.bin
